--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,17 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 config==0.5.0.post0
+dnspython==2.1.0
 docutils==0.16
+dominate==2.6.0
+email-validator==1.1.2
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
 Foundations==2.0.7
 gunicorn==20.0.4
 idna==2.10
