--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,25 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+#React
+# dependencies
+/react-front/node_modules
+/react-front/.pnp
+/react-front/.pnp.js
+
+# testing
+/react-front/coverage
+
+# production
+/react-front/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
